--- a/www/smartmamo/style.css
+++ b/www/smartmamo/style.css
@@ -3,7 +3,8 @@
 
 body {
     font-family: 'Poppins', sans-serif;
-    background: #fafafa;
+    background: #0a3557;
+    margin: 0!important;
 }
 
 p {
